3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

aclocal.m4, configure, utils/config.guess, utils/config.sub, utils/ltmain.sh,
*Makefile.in, plugins/cfanim/Makefile, plugins/Makefile: Rebuilt.
lib/Makefile.am: Add template-maps to list of directories to create while
   install.
Andreas Kirschbaum 2005-11-05

lib/wizhelp/reset: document use of '.' as an argument
Brendan Lally 2005-11-05

random_maps/treasure.c: Fix out-of-bounds array access if place_chest() cannot
   find a free spot to place a new chest.
Andreas Kirschbaum 2005-11-01

Fix bug #1082534 (monks with weapons): Now monks properly are denied from
using weapons. Only newly created monks are affected since it now relies on a
force named "no weapon force" in the player's inventory. The problem was that
become_follower() assumed it was the only means do allow/disallow weapon use.
--
server/gods.c: Do not let the god allow using weapons if a "no weapon force"
   object is present in the player's inventory.
lib/treasures: add force to monk's treasure list.
Andreas Kirschbaum 2005-11-01

Fix bug #815620 (CFPython.SetQuantity() doesn't update client): now notifies
   the client after changing nrof and/or weight.
--
server/plugins.c: Re-calculate player's weight and send item change
   notifications in cfapi_object_set_property().
Andreas Kirschbaum 2005-11-01

Improve newpickup command: add new flag PU_NOT_CURSED to ignore cursed items.
--
include/define.h: Add flag #define.
server/c_object.c: Add "notcursed" option to pickup command.
server/player.c: Respect new flag in check_pickup().
Andreas Kirschbaum 2005-11-01

plugins/cfanim/cfanim.c: remove printf for properties. Export functions for DLL
 for Win32.