@@ -17,6 +17,16 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+Fix case for [sg]etReturnValue. Add compare operator for object and map (of course
+ only == is relevant).
+Modified files:
+ plugins/cfpython/include/cfpython_map_private.h
+ plugins/cfpython/include/cfpython_object_private.h
+ plugins/cfpython/cfpython.c
+ plugins/cfpython/cfpython_map.c
+ plugins/cfpython/cfpython_object.c
+Ryo 2005-11-05
+
 aclocal.m4, configure, utils/config.guess, utils/config.sub, utils/ltmain.sh,
 *Makefile.in, plugins/cfanim/Makefile, plugins/Makefile: Rebuilt.
 lib/Makefile.am: Add template-maps to list of directories to create while
